--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,7 @@
     <title>Speech Logger</title>
 </head>
 <body>
+    <a href="/login">Login with Microsoft</a>
     <button id="start-record-btn" onclick="startRecording()">Start Recording</button>
     <button id="stop-record-btn" onclick="stopRecording()" disabled>Stop Recording</button>
     <ul id="log"></ul>
